@@ -5,6 +5,7 @@ Every release contains many small fixes.
 === next
 * Frontend: replace special Size class with a simple integer (API change)
 * Persistence: pessimistic locking
+* Persistence: Technical fields (create/edit by/at)
 
 === 1.1.0.0
 * Configuration: specify all configuration properties in a config file
